# kursovaya_3

./: .coverage  README.md  info_test_2.py  pyproject.toml
kursovaya_3/: functions.py  vidget_code.py
tests/: test_func.py
