[tool.poetry]
name = "kursovaya-3"
version = "0.1.0"
description = ""
authors = ["Vadim Kravcov <v.sem4ik@mail.ru>"]
readme = "README.md"
packages = [{include = "kursovaya_3"}]

[tool.poetry.dependencies]
python = "^3.10"
datetime = "^5.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
